--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,25 @@ tmp/
 tmp_lecture.tmp
 tmpcsstmp/*
 tmpimgtmp/*
+
+assignment/CFTR_longest_transcript.txt
+assignment/CFTR_longest_transcript_aminoacids.txt
+assignment/CFTR_longest_transcript_coding_seq.txt
+assignment/CFTR_longest_transcript_exons.txt
+assignment/data.zip
+assignment/longest_seq.txt
+assignment/mrna_seq.txt
+assignment/protein.txt
+downloads/pure_text_file.txt
+downloads/utf-text-file.txt
+downloads.zip
+assignment/uncompressed-data/
+assignment/utils.zip
+lectures/t1.png
+lectures/t1.py
+live/
+newproject/
+publish/
+t1.html
+files/output/
+lectures/output.txt
